# vibe-workspace

./: .gitignore  .markdownlint.json  Brewfile  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dagger.json  justfile  release-notes-template.md  rust-toolchain.toml
.dagger/: .gitattributes  .gitignore  go.mod  main.go
docs/: APPS.md  MCP.md  NAVIGATION.md  QUICK_START.md
docs/design/: worktree-management.md
docs/tasks/: 01-worktree-core-module.md  02-worktree-git-operations.md  03-worktree-cli-commands.md  04-worktree-status-tracking.md  05-worktree-merge-detection.md  06-worktree-safety-cleanup.md  07-worktree-configuration.md  08-worktree-mcp-tools.md
src/: lib.rs  main.rs
src/apps/: app_manager.rs  cursor.rs  installer_ui.rs  iterm2.rs  mod.rs  registry.rs  vscode.rs  wezterm.rs  windsurf.rs
src/apps/package_manager/: cargo.rs  homebrew.rs  mod.rs  path.rs
src/apps/warp/: automation.rs  launcher.rs  mod.rs
src/cache/: git_status_cache.rs  mod.rs  repository_cache.rs
src/git/: bulk_clone.rs  clone.rs  mod.rs  search.rs
src/git/provider/: github_cli.rs  mod.rs  vector_store.rs
src/mcp/: mod.rs  registry.rs  server.rs  types.rs
src/mcp/handlers/: apps.rs  config.rs  git.rs  mod.rs  repos.rs  validation.rs  worktree.rs  worktree_help.rs
src/output/: config.rs  display.rs  logging.rs  mod.rs  writer.rs
src/repository/: create.rs
src/ui/: display.rs  formatting.rs  hierarchical_display.rs  mod.rs  prompts.rs  quick_launcher.rs  setup_wizard.rs  smart_menu.rs  state.rs  workflows.rs
src/uri/: handler.rs  mod.rs  schemes.rs
src/utils/: fs.rs  git.rs  mod.rs  platform.rs
src/workspace/: claude_agents.rs  config.rs  config_validator.rs  constants.rs  discovery.rs  install.rs  manager.rs  mod.rs  operations.rs  repo_analyzer.rs  sync_operations.rs  templates.rs
src/worktree/: cache.rs  cleanup.rs  config.rs  config_manager.rs  manager.rs  merge_detection.rs  mod.rs  operations.rs  status.rs
tests/: integration_merge_detection.rs
tests/integration/: basic_operations.rs
tests/integration_launcher/: Cargo.toml  README.md
tests/integration_launcher/src/: assertions.rs  fixtures.rs  main.rs  runner.rs
