[package]
name = "vibe-workspace"
version = "0.1.0"
edition = "2021"
authors = ["Brian <brian@onegrep.dev>"]
description = "Extremely lightweight CLI for managing multiple git repositories and workspace configurations"
license = "MIT"
repository = "https://github.com/toolprint/vibe-workspace"
keywords = ["git", "workspace", "cli", "repository", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
# CLI framework and argument parsing
clap = { version = "4.4", features = ["derive", "env"] }
inquire = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Git operations
git2 = { version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal and display
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# File system operations
walkdir = "2.4"
dirs = "5.0"
tempfile = "3.8"

# Date and time operations
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL encoding
urlencoding = "2.1"

# URL parsing
url = "2.5"

# Regular expressions
regex = "1.10"

# Interactive selection
dialoguer = "0.11"

# macOS-specific dependencies for URI handling
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = "debuginfo" # Remove debug symbols

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"