[package]
name = "vibe-workspace"
version = "0.0.7"
edition = "2021"
authors = ["Brian Cripe <brian@onegrep.dev>"]
description = "Extremely lightweight CLI for managing multiple git repositories and workspace configurations"
license = "MIT"
repository = "https://github.com/toolprint/vibe-workspace"
keywords = ["workspace", "productivity", "automation", "mcp", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
# CLI framework and argument parsing
clap = { version = "4.4", features = ["derive", "env"] }
inquire = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Git operations
git2 = { version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal and display
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# File system operations
walkdir = "2.4"
dirs = "5.0"
tempfile = "3.8"

# Date and time operations
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL encoding
urlencoding = "2.1"

# URL parsing
url = "2.5"

# Regular expressions
regex = "1.10"

# Interactive selection
dialoguer = "0.11"

# Database and caching
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tokio-rusqlite = "0.5"

# Fuzzy search for quick launcher
fuzzy-matcher = "0.3"

# MCP server framework
ultrafast-mcp = { version = "202506018.1.0", features = ["core"] }

# JSON schema generation (for future automation)
schemars = "0.8"

# Thread-safe initialization
once_cell = "1.19"

# cargo-binstall support for binary distribution
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/vibe-workspace-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

# Enhanced cargo-binstall overrides for better platform support
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/vibe-workspace-v{ version }-x86_64-pc-windows-msvc.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/vibe-workspace-v{ version }-aarch64-pc-windows-msvc.zip"
pkg-fmt = "zip"

# Prefer universal2 for macOS when available
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/vibe-workspace-v{ version }-universal2-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]  
pkg-url = "{ repo }/releases/download/v{ version }/vibe-workspace-v{ version }-universal2-apple-darwin.tar.gz"

# macOS-specific dependencies for URI handling
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
core-foundation = "0.9"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = "debuginfo" # Remove debug symbols

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"