[package]
name = "vibe-integration-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and async runtime
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and temp directories
tempfile = "3.8"
walkdir = "2.4"

# Git operations for creating test repos
git2 = "0.18"

# Serialization for verifying outputs
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Terminal output and colors
colored = "2.0"
console = "0.15"

# Test execution and assertions
assert_cmd = "2.0"
predicates = "3.0"

# Pattern matching for test discovery
glob = "0.3"
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"